# Direct3DTriangleRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: Renderer.h
shaders/: pixel_shader.hlsl  vertex_shader.hlsl
src/: Renderer.cpp  main.cpp  test.cpp
